syntax = "proto3";
import "google/protobuf/timestamp.proto";

message ActionLog {
    message Ingest {
        string taskID = 1;
        Provenance provenance = 2;
    }

    message Repetition {
        string taskID = 1;

        repeated MetadataEntry taskParameters = 6;
        string outcome = 7;
        string context = 8;
    }

    message Reschedule {
        string taskID = 1;
        google.protobuf.Timestamp newTimestamp = 2;
    }

    message UpdateMetadata {
        string taskID = 1;

        bool isDeleted = 4;
    }

    message MetadataEntry {
        string key = 1;
        oneof value {
            string string = 2;
            double number = 3;
        }
    }

    message Provenance {
        string provenanceType = 1;
        string externalID = 2;
        google.protobuf.Timestamp modificationTimestamp = 3;
        string title = 4;
        string url = 5;
    }

    google.protobuf.Timestamp timestamp = 1;
    oneof log {
        Ingest ingest = 2;
        Repetition repetition = 3;
        Reschedule reschedule = 4;
        UpdateMetadata updateMetadata = 5;
    }
}
